style-fix: fixed containers css to handle forms overflow-scroll

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,10 @@ body {
   font-family: var(--body-font);
 }
 
+#root {
+  height: 100vh;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--title-font);
 }
